bloodhound/src/snapshots/bloodhound__deserializer__golden_tests__rename.snap
---
source: bloodhound/src/deserializer.rs
assertion_line: 1548
expression: to_json(&event)
---
{
  "args": {
    "newpath": "/tmp/new_name",
    "oldpath": "/tmp/old_name"
  },
  "event": {
    "layer": "behavior",
    "name": "rename",
    "type": "TRACEPOINT"
  },
  "header": {
    "auid": 1000,
    "comm": "bash",
    "pid": 5678,
    "ppid": 1234,
    "sessionid": 42,
    "timestamp": 1709.0
  },
  "return_code": 0
}
