bloodhound/src/snapshots/bloodhound__deserializer__golden_tests__sendto.snap
---
source: bloodhound/src/deserializer.rs
assertion_line: 1567
expression: to_json(&event)
---
{
  "args": {
    "addr": "8.8.8.8",
    "family": 2,
    "fd": 5,
    "port": 53,
    "size": 64
  },
  "event": {
    "layer": "behavior",
    "name": "sendto",
    "type": "TRACEPOINT"
  },
  "header": {
    "auid": 1000,
    "comm": "bash",
    "pid": 5678,
    "ppid": 1234,
    "sessionid": 42,
    "timestamp": 1709.0
  },
  "return_code": 64
}
