bloodhound/src/snapshots/bloodhound__deserializer__golden_tests__tty_read.snap
---
source: bloodhound/src/deserializer.rs
assertion_line: 1388
expression: to_json(&event)
---
{
  "args": {
    "data": "aGVsbG8="
  },
  "event": {
    "layer": "intent",
    "name": "tty_read",
    "type": "TTY"
  },
  "header": {
    "auid": 1000,
    "comm": "bash",
    "pid": 5678,
    "ppid": 1234,
    "sessionid": 42,
    "timestamp": 1709.0
  }
}
